--- a/lab1/pom.xml
+++ b/lab1/pom.xml
@@ -6,12 +6,13 @@
     <artifactId>lab1</artifactId>
     <version>2</version>
     <packaging>pom</packaging>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
     <build>
         <sourceDirectory>src</sourceDirectory>
     </build>
+    <parent>
+        <groupId>org.nau</groupId>
+        <artifactId>projects</artifactId>
+        <version>1</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 </project>
