added an implementation of a rhombus

--- a/lab2/pom.xml
+++ b/lab2/pom.xml
@@ -9,6 +9,13 @@
     <build>
         <sourceDirectory>src</sourceDirectory>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
+    </dependencies>
     <parent>
         <groupId>org.nau</groupId>
         <artifactId>projects</artifactId>
