--- a/lab2/pom.xml
+++ b/lab2/pom.xml
@@ -15,6 +15,11 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
         </dependency>
+        <!--dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.4</version>
+        </dependency-->
     </dependencies>
     <parent>
         <groupId>org.nau</groupId>
