--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,6 @@
     <modules>
         <module>lab1</module>
         <module>lab2</module>
+        <module>lab3</module>
     </modules>
 </project>
